<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="20dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#ffffff"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/see_all_goroup_purchase"
        android:textColor="#37bbb1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/are_you_willing_to_let_us_know_about_you" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/bg_house_state_date"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/my_dna_about_meituan"
        android:textColor="#ffffff" />

</LinearLayout>